--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "12.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "lodash": "^4.17.21",
+    "lodash.find": "^4.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-instagram-embed": "^3.0.0",
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.180",
     "prettier": "2.6.0"
   }
 }
